--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BejanaroNotes</title>
-    // To prevent 404 reload errors
+    <!-- To prevent 404 reload errors -->
     <script type="text/javascript">
       ;(function (l) {
         if (l.search[1] === "/") {
